backends/drm: be a little bit less strict about range checking

Rounding errors in floating point calculations can otherwise wrongly trigger the check and
prevent KMS offloading for no reason

BUG: 499987